--- a/samples/CommunityToolkit.Maui.Sample/Pages/Views/MediaElementPage.xaml
+++ b/samples/CommunityToolkit.Maui.Sample/Pages/Views/MediaElementPage.xaml
@@ -18,6 +18,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="220" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -45,27 +46,36 @@
 
         </HorizontalStackLayout>
 
+        <Grid Grid.Row="2" Padding="0,10,0,10" ColumnDefinitions="*,*,*" ColumnSpacing="5">          
+            <Button Grid.Column="0" Text="Play" Clicked="PlayClicked" />
+            <Button Grid.Column="1" Text="Pause" Clicked="PauseClicked" />
+            <Button Grid.Column="2" Text="Stop" Clicked="StopClicked" />
+        </Grid>
+
         <Slider
-            Grid.Row="2"
+            Grid.Row="3"
             MinimumTrackColor="Gray"
             Maximum="{Binding Duration, Source={x:Reference mediaElement}, Converter={StaticResource TimeSpanConverter}}"
             Value="{Binding Position, Source={x:Reference mediaElement}, Converter={StaticResource TimeSpanConverter}}" />
 
-        <HorizontalStackLayout Padding="0,20,0,0" Grid.Row="3" Spacing="5">
+        <Grid Padding="0,20,0,0" Grid.Row="4" ColumnDefinitions="*,*,*" ColumnSpacing="5">
             <Button
+                Grid.Column="0"
                 Clicked="OnMp4OnlineSourceClicked"
                 Text="Load MP4" />
 
             <Button
+                Grid.Column="1"
                 Clicked="OnHlsSourceClicked"
                 Text="Load HLS" />
 
-            <Button    
+            <Button
+                Grid.Column="2"
                 Clicked="OnResetClicked"
                 Text="Reset Source (null)" />
-        </HorizontalStackLayout>
+        </Grid>
 
-        <HorizontalStackLayout Grid.Row="4" Padding="0,10,0,10" Spacing="5">
+        <HorizontalStackLayout Grid.Row="5" Padding="0,10,0,10" Spacing="5">
             <Label Margin="20,10">
                 <Label.FormattedText>
                     <FormattedString>
@@ -79,7 +89,7 @@
             <Button Text="+" Clicked="SpeedPlusClicked" />
         </HorizontalStackLayout>
         
-        <VerticalStackLayout Grid.Row="5">
+        <VerticalStackLayout Grid.Row="6">
             <HorizontalStackLayout Padding="0,0,0,10">
                 <Switch
                     Margin="0,0,5,0"
